// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BDropZone renders an error 1`] = `
<div>
  <div
    class="makeStyles-root-25 dropzone-error"
  >
    <div
      aria-disabled="false"
      class="byteleaf-dropzone DropzoneArea-dropZone-27"
      style="position: relative;"
    >
      <div
        class="DropzoneArea-dropzoneTextStyle-30"
      >
        <p
          class="DropzoneArea-dropzoneParagraph-32 byteleaf-dropzone-paragraph"
        >
          Drop file here!
        </p>
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root DropzoneArea-uploadIconSize-31"
          focusable="false"
          role="presentation"
          viewBox="0 0 24 24"
        >
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
          <path
            d="M19.35 10.04C18.67 6.59 15.64 4 12 4 9.11 4 6.6 5.64 5.35 8.04 2.34 8.36 0 10.91 0 14c0 3.31 2.69 6 6 6h13c2.76 0 5-2.24 5-5 0-2.64-2.05-4.78-4.65-4.96zM14 13v4h-4v-4H7l5-5 5 5h-3z"
          />
        </svg>
      </div>
      <input
        accept="application/json"
        autocomplete="off"
        multiple=""
        style="position: absolute; top: 0px; right: 0px; bottom: 0px; left: 0px; opacity: 0.00001; pointer-events: none;"
        type="file"
      />
    </div>
    <p
      class="MuiFormHelperText-root"
    >
      Error!
    </p>
  </div>
</div>
`;

exports[`BDropZone renders correctly 1`] = `
<div>
  <div
    class="makeStyles-root-1 "
  >
    <div
      aria-disabled="false"
      class="byteleaf-dropzone DropzoneArea-dropZone-3"
      style="position: relative;"
    >
      <div
        class="DropzoneArea-dropzoneTextStyle-6"
      >
        <p
          class="DropzoneArea-dropzoneParagraph-8 byteleaf-dropzone-paragraph"
        >
          Drop file here!
        </p>
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root DropzoneArea-uploadIconSize-7"
          focusable="false"
          role="presentation"
          viewBox="0 0 24 24"
        >
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
          <path
            d="M19.35 10.04C18.67 6.59 15.64 4 12 4 9.11 4 6.6 5.64 5.35 8.04 2.34 8.36 0 10.91 0 14c0 3.31 2.69 6 6 6h13c2.76 0 5-2.24 5-5 0-2.64-2.05-4.78-4.65-4.96zM14 13v4h-4v-4H7l5-5 5 5h-3z"
          />
        </svg>
      </div>
      <input
        accept="application/json"
        autocomplete="off"
        multiple=""
        style="position: absolute; top: 0px; right: 0px; bottom: 0px; left: 0px; opacity: 0.00001; pointer-events: none;"
        type="file"
      />
    </div>
  </div>
</div>
`;
